k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: benchmark
  labels:
    app: api-benchmark-saas
